--- a/Project File.ipynb
+++ b/Project File.ipynb
@@ -85,7 +85,48 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "NEXT IMPORT FILE"
+    "NEXT IMPORT FILE\n",
+    "Now you can work here. But you nedd to do one thing\n",
+    "Suppose you change something in this file like this"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "2+3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "now you need to PUSH this new changes to my repository in github. So you need to do this step"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1.after changing something in this file, go to github desktop\n",
+    "2. "
    ]
   }
  ],
