--- a/Project File.ipynb
+++ b/Project File.ipynb
@@ -126,7 +126,8 @@
    "outputs": [],
    "source": [
     "1.after changing something in this file, go to github desktop\n",
-    "2. "
+    "2.  click on commit to master (you will see some canges are showing github desktop)\n",
+    "3. Then push to origin"
    ]
   }
  ],
