--- a/Global.ipynb
+++ b/Global.ipynb
@@ -487,34 +487,6 @@
     {
      "data": {
       "text/plain": [
-       "Year                                                                                                    1751.0\n",
-       "Total carbon emissions from fossil fuel consumption and cement production (million metric tons of C)       3.0\n",
-       "Carbon emissions from gas fuel consumption                                                                 0.0\n",
-       "Carbon emissions from liquid fuel consumption                                                              0.0\n",
-       "Carbon emissions from solid fuel consumption                                                               3.0\n",
-       "Carbon emissions from cement production                                                                    0.0\n",
-       "Carbon emissions from gas flaring                                                                          0.0\n",
-       "Per capita carbon emissions (metric tons of carbon; after 1949 only)                                       NaN\n",
-       "Name: 0, dtype: float64"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.iloc[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
        "Year                                                                                                      int64\n",
        "Total carbon emissions from fossil fuel consumption and cement production (million metric tons of C)      int64\n",
        "Carbon emissions from gas fuel consumption                                                                int64\n",
@@ -526,7 +498,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -554,7 +526,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -573,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +572,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -612,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +853,7 @@
        "[264 rows x 8 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -892,7 +864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1101,7 +1073,7 @@
        "max                                             1.360000                     "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1112,16 +1084,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x2bf7b80b348>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x162fc75b8c8>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
