--- a/Global.ipynb
+++ b/Global.ipynb
@@ -108,9 +108,10 @@
    "source": [
     "# Now after realising those pictures, to make a clear estatement of this serious situation and obligation of mankind, we would like to show how CO2 is increasing day by day and how it can destroy our future by making a relation with Greenhouse effect dataset. We would like to propose a estimated solution for that. Thus, we will be using three hypothesises. \n",
     "\n",
-    "# First Hypothesis is for prediction\n",
-    "# Second Hypothesis is for corelation with Greenhouse\n",
-    "# Third Hypothesis is for renewable energy as a solution of CO2"
+    "# First Hypothesis is for prediction the CO2 Emission untill 2030\n",
+    "\n",
+    "# Second Hypothesis is for corelation with Greenhouse. Can CO2 influence Greenhouse?\n",
+    "# Third Hypothesis is, Can renewable energy be a solution of CO2 Emission?"
    ]
   },
   {
@@ -3087,7 +3088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
     {
@@ -3099,7 +3100,7 @@
       "Dep. Variable:                                        Total   No. Observations:                  264\n",
       "Model:             SARIMAX(1, 1, 2)x(2, 1, [1, 2, 3, 4], 5)   Log Likelihood               -1451.213\n",
       "Date:                                      Tue, 26 May 2020   AIC                           2922.426\n",
-      "Time:                                              08:04:06   BIC                           2957.956\n",
+      "Time:                                              08:41:20   BIC                           2957.956\n",
       "Sample:                                          01-01-1751   HQIC                          2936.713\n",
       "                                               - 01-01-2014                                         \n",
       "Covariance Type:                                        opg                                         \n",
@@ -3136,7 +3137,7 @@
     "model_SARIMA = sm.tsa.statespace.SARIMAX(data.Total, order=(p, d, q),\n",
     "                                       seasonal_order=(P, D, Q, s)).fit(disp=-1)\n",
     "\n",
-    "print(best_model.summary())"
+    "print(model_SARIMA.summary())"
    ]
   },
   {
